--- a/preview-home.html
+++ b/preview-home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="linkavista" content="link-3843-9604">
     <title>Chargeur-Rapide – média indépendant</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
